--- a/index.html
+++ b/index.html
@@ -272,7 +272,11 @@
                 <div class="project-item">
                     <img src="" alt="">
                     <h2>Proyect 1</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatum.</p>
+                    <p>About
+                        "Digital Harmony" is a comprehensive portfolio project that encapsulates my diverse skills,
+                        creativity, and passion for digital craftsmanship. This curated collection reflects my journey
+                        through various disciplines, showcasing a harmonious blend of design, development, and
+                        innovation.</p>
 
                     <div class="icons-container">
                         <a href="https://github.com/kjarj54/Portafolio" target="_blank">
@@ -288,18 +292,27 @@
                 </div>
 
                 <div class="project-item">
-                    <img src="" alt="">
-                    <h2>Proyect 1</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatum.</p>
+                    <img src="resources/Clinica UNA.png" alt="ClinicaUNA">
+                    <h2>ClinicaUNA</h2>
+                    <p>ClinicaUNA is a JavaFX application that allows managing medical records and appointments for a
+                        clinic. It uses web services to connect to a Payara application server and an Oracle 21c XE
+                        database. It is a multilingual application that supports Spanish and English.</p>
                     <div class="icons-container">
-                        <a href="https://github.com/kjarj54/Portafolio" target="_blank">
+                        <a href="https://github.com/kjarj54/ClinicaUNA" target="_blank">
                             <i class="devicon-github-original"></i>
                         </a>
-                        <a href="">
-                            <i class=""></i>
-                        </a>
-                        <a href="">
-                            <i class=""></i>
+                    </div>
+                </div>
+
+                <div class="project-item">
+                    <img src="resources/CineUNA.jpg" alt="CineUNA">
+                    <h2>CineUNA</h2>
+                    <p>CineUNA - Cinema Billing Application CineUNA is a comprehensive cinema billing application
+                        developed in Java, utilizing JavaFX for the user interface, CSS for styling, JPA for database
+                        interaction, and Web Services for external connections.</p>
+                    <div class="icons-container">
+                        <a href="https://github.com/kjarj54/ProyectoCineUNA" target="_blank">
+                            <i class="devicon-github-original"></i>
                         </a>
                     </div>
                 </div>
@@ -307,33 +320,12 @@
                 <div class="project-item">
                     <img src="" alt="">
                     <h2>Proyect 1</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatum.</p>
+                    <p>Apply Java FX knowledge practically by developing a dynamic and configurable kiosk for displaying
+                        various types of content. This project incorporates concepts such as classes, interfaces,
+                        heredity, polymorphism, CSS, etc.</p>
                     <div class="icons-container">
-                        <a href="https://github.com/kjarj54/Portafolio" target="_blank">
+                        <a href="https://github.com/kjarj54/kiosco_informativo" target="_blank">
                             <i class="devicon-github-original"></i>
-                        </a>
-                        <a href="">
-                            <i class=""></i>
-                        </a>
-                        <a href="">
-                            <i class=""></i>
-                        </a>
-                    </div>
-                </div>
-
-                <div class="project-item">
-                    <img src="" alt="">
-                    <h2>Proyect 1</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatum.</p>
-                    <div class="icons-container">
-                        <a href="https://github.com/kjarj54/Portafolio" target="_blank">
-                            <i class="devicon-github-original"></i>
-                        </a>
-                        <a href="">
-                            <i class=""></i>
-                        </a>
-                        <a href="">
-                            <i class=""></i>
                         </a>
                     </div>
                 </div>
