--- a/index.html
+++ b/index.html
@@ -270,14 +270,8 @@
             <h1>Proyects</h1>
             <div class="project-container">
                 <div class="project-item">
-                    <img src="" alt="">
-                    <h2>Proyect 1</h2>
-                    <p>About
-                        "Digital Harmony" is a comprehensive portfolio project that encapsulates my diverse skills,
-                        creativity, and passion for digital craftsmanship. This curated collection reflects my journey
-                        through various disciplines, showcasing a harmonious blend of design, development, and
-                        innovation.</p>
-
+                    <img src="resources/Portafolio.png" alt="Portafolio">
+                    <h2>Portafolio</h2>
                     <div class="icons-container">
                         <a href="https://github.com/kjarj54/Portafolio" target="_blank">
                             <i class="devicon-github-original"></i>
@@ -294,12 +288,15 @@
                 <div class="project-item">
                     <img src="resources/Clinica UNA.png" alt="ClinicaUNA">
                     <h2>ClinicaUNA</h2>
-                    <p>ClinicaUNA is a JavaFX application that allows managing medical records and appointments for a
-                        clinic. It uses web services to connect to a Payara application server and an Oracle 21c XE
-                        database. It is a multilingual application that supports Spanish and English.</p>
                     <div class="icons-container">
                         <a href="https://github.com/kjarj54/ClinicaUNA" target="_blank">
                             <i class="devicon-github-original"></i>
+                        </a>
+                        <a href="">
+                            <i class=""></i>
+                        </a>
+                        <a href="">
+                            <i class=""></i>
                         </a>
                     </div>
                 </div>
@@ -307,29 +304,111 @@
                 <div class="project-item">
                     <img src="resources/CineUNA.jpg" alt="CineUNA">
                     <h2>CineUNA</h2>
-                    <p>CineUNA - Cinema Billing Application CineUNA is a comprehensive cinema billing application
-                        developed in Java, utilizing JavaFX for the user interface, CSS for styling, JPA for database
-                        interaction, and Web Services for external connections.</p>
                     <div class="icons-container">
                         <a href="https://github.com/kjarj54/ProyectoCineUNA" target="_blank">
                             <i class="devicon-github-original"></i>
+                        </a>
+                        <a href="">
+                            <i class=""></i>
+                        </a>
+                        <a href="">
+                            <i class=""></i>
                         </a>
                     </div>
                 </div>
 
                 <div class="project-item">
-                    <img src="" alt="">
-                    <h2>Proyect 1</h2>
-                    <p>Apply Java FX knowledge practically by developing a dynamic and configurable kiosk for displaying
-                        various types of content. This project incorporates concepts such as classes, interfaces,
-                        heredity, polymorphism, CSS, etc.</p>
+                    <img src="resources/Kiosko Informativo.jpg" alt="kiosco_informativo">
+                    <h2>kiosco_informativo</h2>
                     <div class="icons-container">
                         <a href="https://github.com/kjarj54/kiosco_informativo" target="_blank">
                             <i class="devicon-github-original"></i>
                         </a>
+                        <a href="">
+                            <i class=""></i>
+                        </a>
+                        <a href="">
+                            <i class=""></i>
+                        </a>
+                    </div>
+                </div>
+                <div class="project-item">
+                    <img src="resources/PomodoroClock.png" alt="PomodoroClock">
+                    <h2>25 + 5 Clock</h2>
+                    <div class="icons-container">
+                        <a href="https://github.com/kjarj54/Practicas-FreeCodeCamp-FrontEndDevelopmentLibraries/tree/main/25%20%2B%205%20Clock" target="_blank">
+                            <i class="devicon-github-original"></i>
+                        </a>
+                        <a href="https://kjarj54.github.io/Practicas-FreeCodeCamp-FrontEndDevelopmentLibraries/25%20+%205%20Clock/" target="_blank">
+                            <i class="bi bi-link-45deg"></i>
+                        </a>
+                        <a href="">
+                            <i class=""></i>
+                        </a>
+                    </div>
+                </div>
+                <div class="project-item">
+                    <img src="resources/Drum Machine.png" alt="DrumMachine">
+                    <h2>Drum Machine</h2>
+                    <div class="icons-container">
+                        <a href="https://github.com/kjarj54/Practicas-FreeCodeCamp-FrontEndDevelopmentLibraries/tree/main/Drum%20Machine" target="_blank">
+                            <i class="devicon-github-original"></i>
+                        </a>
+                        <a href="https://kjarj54.github.io/Practicas-FreeCodeCamp-FrontEndDevelopmentLibraries/Drum%20Machine/" target="_blank">
+                            <i class="bi bi-link-45deg"></i>
+                        </a>
+                        <a href="">
+                            <i class=""></i>
+                        </a>
+                    </div>
+                </div>
+                <div class="project-item">
+                    <img src="resources/JSCalculator.png" alt="JavaScriptCalculator">
+                    <h2>JavaScript Calculator</h2>
+                    <div class="icons-container">
+                        <a href="https://github.com/kjarj54/Practicas-FreeCodeCamp-FrontEndDevelopmentLibraries/tree/main/JavaScript%20Calculator" target="_blank">
+                            <i class="devicon-github-original"></i>
+                        </a>
+                        <a href="https://kjarj54.github.io/Practicas-FreeCodeCamp-FrontEndDevelopmentLibraries/JavaScript%20Calculator/" target="_blank">
+                            <i class="bi bi-link-45deg"></i>
+                        </a>
+                        <a href="">
+                            <i class=""></i>
+                        </a>
+                    </div>
+                </div>
+                <div class="project-item">
+                    <img src="resources/Markdown Previewer.png" alt="MarkdownPreviewer">
+                    <h2>Markdown Previewer</h2>
+                    <div class="icons-container">
+                        <a href="https://github.com/kjarj54/Practicas-FreeCodeCamp-FrontEndDevelopmentLibraries/tree/main/Markdown%20Previewer" target="_blank">
+                            <i class="devicon-github-original"></i>
+                        </a>
+                        <a href="https://kjarj54.github.io/Practicas-FreeCodeCamp-FrontEndDevelopmentLibraries/Markdown%20Previewer/" target="_blank">
+                            <i class="bi bi-link-45deg"></i>
+                        </a>
+                        <a href="">
+                            <i class=""></i>
+                        </a>
+                    </div>
+                </div>
+                <div class="project-item">
+                    <img src="resources/Random Quote Machine.png" alt="Random Quote Machine">
+                    <h2>Random Quote Machine</h2>
+                    <div class="icons-container">
+                        <a href="https://github.com/kjarj54/Practicas-FreeCodeCamp-FrontEndDevelopmentLibraries/tree/main/Random%20Quote%20Machine" target="_blank">
+                            <i class="devicon-github-original"></i>
+                        </a>
+                        <a href="https://kjarj54.github.io/Practicas-FreeCodeCamp-FrontEndDevelopmentLibraries/Random%20Quote%20Machine/" target="_blank">
+                            <i class="bi bi-link-45deg"></i>
+                        </a>
+                        <a href="">
+                            <i class=""></i>
+                        </a>
                     </div>
                 </div>
             </div>
+
             <div class="repos-container">
 
             </div>
