--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
 
         <header>
             <picture>
-                <img class="mainImage" src="resources/Example.jpg" alt="Profile image">
+                <img class="mainImage" src="resources/Yo.jpg" alt="Profile image">
             </picture>
             <h1>Kevin Arauz</h1>
             <div class="containerLinks">
-                <p>👾 Jr.Developer | Jr.Software Engineer | Jr.FullStack</p>
+                <p>👾 Software Engineer | FullStack Developer</p>
                 <a class="githubLink" href="https://github.com/kjarj54" target="_blank">
                     <i class="bi bi-github"></i>
                 </a>
