--- a/index.html
+++ b/index.html
@@ -163,9 +163,8 @@
                 </div>
             </div>
         </section>
-
         <section id="formacion">
-            <h1>Training</h1>
+            <h1>Education</h1>
             <div class="training-container">
                 <a href="https://www.una.ac.cr/" target="_blank">
                     <div class="training-item">
@@ -174,6 +173,13 @@
 
                     </div>
                 </a>
+            </div>
+        </section>
+
+        <section id="formacion">
+            <h1>Training</h1>
+            <div class="training-container">
+
                 <a href="https://www.hackerrank.com/certificates/24a513910d5f" target="_blank">
                     <div class="training-item">
                         <img src="resources/java_basic certificate.jpg" alt="java_basic">
@@ -267,7 +273,7 @@
 
         </section>
         <section id="proyectos">
-            <h1>Proyects</h1>
+            <h1>Projects</h1>
             <div class="project-container">
                 <div class="project-item">
                     <img src="resources/Portafolio.png" alt="Portafolio">
@@ -336,10 +342,12 @@
                     <img src="resources/PomodoroClock.png" alt="PomodoroClock">
                     <h2>25 + 5 Clock</h2>
                     <div class="icons-container">
-                        <a href="https://github.com/kjarj54/Practicas-FreeCodeCamp-FrontEndDevelopmentLibraries/tree/main/25%20%2B%205%20Clock" target="_blank">
+                        <a href="https://github.com/kjarj54/Practicas-FreeCodeCamp-FrontEndDevelopmentLibraries/tree/main/25%20%2B%205%20Clock"
+                            target="_blank">
                             <i class="devicon-github-original"></i>
                         </a>
-                        <a href="https://kjarj54.github.io/Practicas-FreeCodeCamp-FrontEndDevelopmentLibraries/25%20+%205%20Clock/" target="_blank">
+                        <a href="https://kjarj54.github.io/Practicas-FreeCodeCamp-FrontEndDevelopmentLibraries/25%20+%205%20Clock/"
+                            target="_blank">
                             <i class="bi bi-link-45deg"></i>
                         </a>
                         <a href="">
@@ -351,10 +359,12 @@
                     <img src="resources/Drum Machine.png" alt="DrumMachine">
                     <h2>Drum Machine</h2>
                     <div class="icons-container">
-                        <a href="https://github.com/kjarj54/Practicas-FreeCodeCamp-FrontEndDevelopmentLibraries/tree/main/Drum%20Machine" target="_blank">
+                        <a href="https://github.com/kjarj54/Practicas-FreeCodeCamp-FrontEndDevelopmentLibraries/tree/main/Drum%20Machine"
+                            target="_blank">
                             <i class="devicon-github-original"></i>
                         </a>
-                        <a href="https://kjarj54.github.io/Practicas-FreeCodeCamp-FrontEndDevelopmentLibraries/Drum%20Machine/" target="_blank">
+                        <a href="https://kjarj54.github.io/Practicas-FreeCodeCamp-FrontEndDevelopmentLibraries/Drum%20Machine/"
+                            target="_blank">
                             <i class="bi bi-link-45deg"></i>
                         </a>
                         <a href="">
@@ -366,10 +376,12 @@
                     <img src="resources/JSCalculator.png" alt="JavaScriptCalculator">
                     <h2>JavaScript Calculator</h2>
                     <div class="icons-container">
-                        <a href="https://github.com/kjarj54/Practicas-FreeCodeCamp-FrontEndDevelopmentLibraries/tree/main/JavaScript%20Calculator" target="_blank">
+                        <a href="https://github.com/kjarj54/Practicas-FreeCodeCamp-FrontEndDevelopmentLibraries/tree/main/JavaScript%20Calculator"
+                            target="_blank">
                             <i class="devicon-github-original"></i>
                         </a>
-                        <a href="https://kjarj54.github.io/Practicas-FreeCodeCamp-FrontEndDevelopmentLibraries/JavaScript%20Calculator/" target="_blank">
+                        <a href="https://kjarj54.github.io/Practicas-FreeCodeCamp-FrontEndDevelopmentLibraries/JavaScript%20Calculator/"
+                            target="_blank">
                             <i class="bi bi-link-45deg"></i>
                         </a>
                         <a href="">
@@ -381,10 +393,12 @@
                     <img src="resources/Markdown Previewer.png" alt="MarkdownPreviewer">
                     <h2>Markdown Previewer</h2>
                     <div class="icons-container">
-                        <a href="https://github.com/kjarj54/Practicas-FreeCodeCamp-FrontEndDevelopmentLibraries/tree/main/Markdown%20Previewer" target="_blank">
+                        <a href="https://github.com/kjarj54/Practicas-FreeCodeCamp-FrontEndDevelopmentLibraries/tree/main/Markdown%20Previewer"
+                            target="_blank">
                             <i class="devicon-github-original"></i>
                         </a>
-                        <a href="https://kjarj54.github.io/Practicas-FreeCodeCamp-FrontEndDevelopmentLibraries/Markdown%20Previewer/" target="_blank">
+                        <a href="https://kjarj54.github.io/Practicas-FreeCodeCamp-FrontEndDevelopmentLibraries/Markdown%20Previewer/"
+                            target="_blank">
                             <i class="bi bi-link-45deg"></i>
                         </a>
                         <a href="">
@@ -396,10 +410,12 @@
                     <img src="resources/Random Quote Machine.png" alt="Random Quote Machine">
                     <h2>Random Quote Machine</h2>
                     <div class="icons-container">
-                        <a href="https://github.com/kjarj54/Practicas-FreeCodeCamp-FrontEndDevelopmentLibraries/tree/main/Random%20Quote%20Machine" target="_blank">
+                        <a href="https://github.com/kjarj54/Practicas-FreeCodeCamp-FrontEndDevelopmentLibraries/tree/main/Random%20Quote%20Machine"
+                            target="_blank">
                             <i class="devicon-github-original"></i>
                         </a>
-                        <a href="https://kjarj54.github.io/Practicas-FreeCodeCamp-FrontEndDevelopmentLibraries/Random%20Quote%20Machine/" target="_blank">
+                        <a href="https://kjarj54.github.io/Practicas-FreeCodeCamp-FrontEndDevelopmentLibraries/Random%20Quote%20Machine/"
+                            target="_blank">
                             <i class="bi bi-link-45deg"></i>
                         </a>
                         <a href="">
